Continue on select your class flow.

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -150,6 +150,7 @@
 .class-choose .content.select-department .buttons {
   text-align: left;
   padding: 8px;
+  margin-top: 50px;
 }
 .class-choose .search-form {
   border-radius: 15px;
