--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -11,7 +11,7 @@
         margin: 0 auto;
         width: 100%;
         display: block;
-        font-size: 32px;
+        font-size: 30px;
         padding-top: 50px;
         //padding: 50px 0;
         font-weight: bold;
@@ -64,10 +64,11 @@
 
             .course-name {
                 margin: 0 auto 12px auto;
-                font-size: 25px;
+                font-size: 20px;
             }
 
             .number, .instructor {
+                font-size: 12px;
                 min-height: 14px;
                 line-height: 14px;
             }
@@ -287,6 +288,7 @@
             padding: 0 10px 0 25px;
             width: ~"calc(100% - 60px)";
             border: 0;
+            .placeHolder(@headerbackground);
         }
 
         .search-button {
