--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -14,7 +14,7 @@
         <md-icon md-svg-icon="t:searchIcon"></md-icon>
     </button>
 </form>
-<div ng-switch="cc.step" class="">
+<div ng-switch="cc.step" class="switch">
     <div ng-switch-when="1" class="content default">
         <!--Artboard 1 copy / copy 7 / copy 8 -->
 
