--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -131,6 +131,7 @@
             font-weight: bold;
             max-width: 470px;
             margin: 0 auto;
+            color: @textColorPurple;
 
             @media(max-width: 600px) {
                 font-size: 18px;
