--- a/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Search/Index.cshtml
@@ -46,8 +46,8 @@
                     <div class="text">@GeneralResources.SearchEmptyStateClassesText</div>
                     <p class="create-class">
                         @GeneralResources.SearchEmptyStateCreateCourse
-                        &nbsp;<button type="button" ng-click="s.univeristyClick()" @*href="@Url.RouteUrl("LibraryDesktop")"*@>@GeneralResources.SearchEmptyStateCreateCourseLinkText</button>
                     </p>
+                    <button type="button" class="action-btn" ng-click="s.univeristyClick()">@GeneralResources.SearchEmptyStateCreateCourseLinkText</button>
                 </div>
             </div>
         </div>
