--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.rtl.css
@@ -5175,3 +5175,32 @@ md-tooltip.md-default-theme, md-tooltip {
     md-tooltip.md-default-theme .md-content, md-tooltip .md-content {
         background-color: rgba(0,0,0,0.54);
     }
+
+
+md-input-container.md-default-theme ng-messages :not(.md-char-counter), md-input-container ng-messages :not(.md-char-counter), md-input-container.md-default-theme [ng-messages] :not(.md-char-counter), md-input-container [ng-messages] :not(.md-char-counter), md-input-container.md-default-theme ng-message :not(.md-char-counter), md-input-container ng-message :not(.md-char-counter), md-input-container.md-default-theme data-ng-message :not(.md-char-counter), md-input-container data-ng-message :not(.md-char-counter), md-input-container.md-default-theme x-ng-message :not(.md-char-counter), md-input-container x-ng-message :not(.md-char-counter), md-input-container.md-default-theme [ng-message] :not(.md-char-counter), md-input-container [ng-message] :not(.md-char-counter), md-input-container.md-default-theme [data-ng-message] :not(.md-char-counter), md-input-container [data-ng-message] :not(.md-char-counter), md-input-container.md-default-theme [x-ng-message] :not(.md-char-counter), md-input-container [x-ng-message] :not(.md-char-counter), md-input-container.md-default-theme [ng-message-exp] :not(.md-char-counter), md-input-container [ng-message-exp] :not(.md-char-counter), md-input-container.md-default-theme [data-ng-message-exp] :not(.md-char-counter), md-input-container [data-ng-message-exp] :not(.md-char-counter), md-input-container.md-default-theme [x-ng-message-exp] :not(.md-char-counter), md-input-container [x-ng-message-exp] :not(.md-char-counter) {
+    color: rgb(221,44,0);
+}
+
+md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused.md-warn .md-input, md-input-container:not(.md-input-invalid).md-input-focused.md-warn .md-input {
+    border-color: rgb(221,44,0);
+}
+
+md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused.md-warn label, md-input-container:not(.md-input-invalid).md-input-focused.md-warn label {
+    color: rgb(221,44,0);
+}
+
+md-input-container.md-default-theme.md-input-invalid .md-input, md-input-container.md-input-invalid .md-input {
+    border-color: rgb(221,44,0);
+}
+
+md-input-container.md-default-theme.md-input-invalid.md-input-focused label, md-input-container.md-input-invalid.md-input-focused label {
+    color: rgb(221,44,0);
+}
+
+md-input-container.md-default-theme.md-input-invalid ng-message, md-input-container.md-input-invalid ng-message, md-input-container.md-default-theme.md-input-invalid data-ng-message, md-input-container.md-input-invalid data-ng-message, md-input-container.md-default-theme.md-input-invalid x-ng-message, md-input-container.md-input-invalid x-ng-message, md-input-container.md-default-theme.md-input-invalid [ng-message], md-input-container.md-input-invalid [ng-message], md-input-container.md-default-theme.md-input-invalid [data-ng-message], md-input-container.md-input-invalid [data-ng-message], md-input-container.md-default-theme.md-input-invalid [x-ng-message], md-input-container.md-input-invalid [x-ng-message], md-input-container.md-default-theme.md-input-invalid [ng-message-exp], md-input-container.md-input-invalid [ng-message-exp], md-input-container.md-default-theme.md-input-invalid [data-ng-message-exp], md-input-container.md-input-invalid [data-ng-message-exp], md-input-container.md-default-theme.md-input-invalid [x-ng-message-exp], md-input-container.md-input-invalid [x-ng-message-exp], md-input-container.md-default-theme.md-input-invalid .md-char-counter, md-input-container.md-input-invalid .md-char-counter {
+    color: rgb(221,44,0);
+}
+md-select.md-default-theme.ng-invalid.ng-dirty .md-select-value, md-select.ng-invalid.ng-dirty .md-select-value {
+    color: rgb(221,44,0) !important;
+    border-bottom-color: rgb(221,44,0) !important;
+}
